--- a/src/Resume.css
+++ b/src/Resume.css
@@ -1,6 +1,10 @@
 #page-wrap { 
   width: 800px; 
-  margin: 40px auto 60px; 
+  margin: auto;
+  background: url(/images/background.png); 
+  padding: 40px;
+  border-left: 1px solid #999;
+  border-right: 1px solid #999;
 }
 #objective { 
   width: 500px; 
