--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 body { 
   font: 16px Helvetica, Sans-Serif; 
   line-height: 24px; 
-  background: url(/images/background.png); 
+  background: #f8f8f8;
+  
 }
 .clear { 
   clear: both; 
@@ -22,6 +23,7 @@ h2 {
   font-size: 20px; 
   margin: 0 0 6px 0; 
   position: relative; 
+  border-bottom: 1px solid #999; 
 }
 h2 span { 
   position: absolute; 
