--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ h2 {
   margin: 0px;
 }
 h3 {
-  font-size: 14pt;
+  font-size: 16pt;
   line-height: 24pt;
 }
 h4 {
@@ -232,6 +232,7 @@ body {
 }
 .custom-content-wrapper {
   padding-right: 30px;
+  padding-bottom: 25px;
   margin-bottom: 25px;
   border-bottom: 1px solid #bdbdbd;
 }
@@ -405,8 +406,6 @@ body {
     margin-top: 0px !important;
   }
   .row {
-    margin-left: -1.5rem !important;
-    margin-right: -1.5rem !important;
     overflow-x: hidden !important;
   }
   .button-collapse i {
@@ -449,7 +448,8 @@ body {
     margin-bottom: 20px;
   }
   .section .custom-content-wrapper {
-    padding: initial;
+    padding: 0px 0px 25px 0px;
+    padding-bottom: 25px;
   }
   .section .custom-content-wrapper p {
     margin-top: 10px;
